--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 # Built application files
 *.apk
 *.aar
@@ -50,6 +49,7 @@ captures/
 .idea/modules.xml
 # Comment next line if keeping position of elements in Navigation Editor is relevant for you
 .idea/navEditor.xml
+.idea
 
 # Keystore files
 # Uncomment the following lines if you do not want to check your keystore files in.
@@ -84,11 +84,7 @@ lint/generated/
 lint/outputs/
 lint/tmp/
 # lint/reports/
-=======
+
 .androidide/
-.git/
-.gradle/
-.idea/
 app/build/
 local.properties
->>>>>>> de067a7 (Initial Code Commit)
