--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,7 @@ dependencies {
 	implementation 'androidx.constraintlayout:constraintlayout:2.2.0-alpha09'
 	implementation 'androidx.viewpager2:viewpager2:1.1.0-beta01'
 	implementation 'com.google.android.material:material:1.9.0-beta01'
+	implementation 'io.github.amrdeveloper:treeview:1.1.3'
 	
 	// Code Editor
 	implementation platform('io.github.Rosemoe.sora-editor:bom:0.21.1')
