--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,11 +31,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/App.MainTheme"
-		android:requestLegacyExternalStorage="true">
+        android:theme="@style/App.MainTheme">
 		
         <activity
-            android:name=".MainActivity"
+            android:name=".activities.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -43,9 +42,9 @@
             </intent-filter>
 			
         </activity>
-		<activity android:name=".ProjectActivity" />
+		<activity android:name=".activities.ProjectActivity" />
 		
 		<service android:name=".managers.rpc.RPCService" android:stopWithTask="true"/>
-		<service android:name=".managers.lsp.LuaLSPService" android:stopWithTask="true"/>
+		<service android:name=".managers.lsp.lua.LuaLSPService" android:stopWithTask="true"/>
     </application>
 </manifest>
