--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,7 +31,7 @@ android {
 }
 
 dependencies {
-	def LSP_VERSION = "0.20.1"
+	def LSP_VERSION = "0.21.0"
 	
 	implementation 'androidx.appcompat:appcompat:1.7.0-alpha02'
 	implementation 'androidx.core:core-splashscreen:1.0.0'
@@ -45,7 +45,7 @@ dependencies {
 	implementation 'io.github.amrdeveloper:treeview:1.1.3'
 	
 	// Code Editor
-	implementation platform('io.github.Rosemoe.sora-editor:bom:0.21.1')
+	implementation platform('io.github.Rosemoe.sora-editor:bom:0.21.1-f243159-SNAPSHOT')
 	implementation 'io.github.Rosemoe.sora-editor:editor'
 	implementation 'io.github.Rosemoe.sora-editor:editor-lsp'
 	implementation 'io.github.Rosemoe.sora-editor:language-textmate'
