--- a/settings.gradle
+++ b/settings.gradle
@@ -10,6 +10,8 @@ dependencyResolutionManagement {
     repositories {
         google()
         mavenCentral()
+		
+		maven { url 'https://s01.oss.sonatype.org/content/repositories/snapshots' }
     }
 }
 rootProject.name = "ESManager"
