--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,15 +34,15 @@ dependencies {
 	def LSP_VERSION = "0.21.0"
 	
 	implementation 'androidx.appcompat:appcompat:1.7.0-alpha02'
-	implementation 'androidx.core:core-splashscreen:1.0.0'
+	implementation 'androidx.core:core-splashscreen:1.0.1'
     implementation 'androidx.preference:preference:1.2.0'
-    implementation 'androidx.security:security-crypto:1.1.0-alpha05'
+    implementation 'androidx.security:security-crypto:1.1.0-alpha06'
 	
 	// UI
-	implementation 'androidx.constraintlayout:constraintlayout:2.2.0-alpha09'
-	implementation 'androidx.viewpager2:viewpager2:1.1.0-beta01'
-	implementation 'com.google.android.material:material:1.9.0-beta01'
-	implementation 'io.github.amrdeveloper:treeview:1.1.3'
+	implementation 'androidx.constraintlayout:constraintlayout:2.2.0-alpha10'
+	implementation 'androidx.viewpager2:viewpager2:1.1.0-beta02'
+	implementation 'com.google.android.material:material:1.11.0-alpha01'
+	implementation 'io.github.amrdeveloper:treeview:1.1.4'
 	
 	// Code Editor
 	implementation platform('io.github.Rosemoe.sora-editor:bom:0.21.1-f243159-SNAPSHOT')
