--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,7 @@ dependencies {
 	
 	// IO / Network
 	implementation 'com.anggrayudi:storage:1.5.5'
+	implementation 'com.lazygeniouz:dfc:1.0.7'
 	implementation 'commons-io:commons-io:2.11.0'
 	implementation 'org.java-websocket:Java-WebSocket:1.5.3'
 	
