--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,7 +36,8 @@
 		
         <activity
             android:name=".activities.MainActivity"
-            android:exported="true">
+            android:exported="true"
+			android:configChanges="orientation">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -47,7 +48,7 @@
 			android:name=".activities.ProjectActivity"
 			android:exported="false" />
 		<activity
-			android:name=".fragments.main.SettingsFragment"
+			android:name=".fragments.main.SettingsFragmentActivity"
 			android:exported="false" />
 		
 		<service
